assets/style.css
:root {
	--border-radius: 0.25em;
	--color-dim: #7f7f7f;
	--color-highlight: #b591dd;
	--color-text: #c3c3c3;
}

::selection {
	background: #7d46bb;
}

a {
	color: inherit;
}

a svg {
	position: relative;
	top: 0.15em;
}

article {
	margin: 2em 0;
}

article h1 {
	color: var(--color-highlight);
	font-size: 24pt;
	line-height: 1.5em;
	margin: 0.2em 0 0.5em;
}

article h2 {
	color: inherit;
	font-size: 18pt;
	line-height: 1em;
	margin: 1.5em 0 1em;
}

article h3,
article h4,
article h5,
article h6,
article p {
	margin: 1em 0;
}

article img {
	margin: 0 -2.5%;
	max-width: 105%;
	width: 105%;
}

blockquote {
	border-left: 5px solid var(--color-dim);
	margin-left: 1em;
	padding-left: 1em;
}

body {
	font-family: Rockwell, 'Rockwell Nova', 'Roboto Slab', 'DejaVu Serif', 'Sitka Small', serif;
	font-size: 13pt;
	font-weight: normal;
	margin: 0;
}

footer {
	margin: 2em 0;
	text-align: center;
}

h1 {
	font-size: 42pt;
}

h1 a {
	text-decoration: none;
}

h1 a:hover {
	color: #dadada;
}

h2 {
	color: var(--color-highlight);
	font-size: 24pt;
	line-height: 1.5em;
	margin-bottom: 0.5em;
}

h3, h4, h5, h6 {
	margin: 0;
}

header {
	text-align: center;
}

html {
	background: linear-gradient(#0f172a, #162342) #0f172a;
	background-attachment: fixed;
	color: var(--color-text);
}

img {
	border-radius: var(--border-radius);
	max-width: 100%;
}

main {
	margin: 4em 0;
}

nav {
	text-transform: lowercase;
}

nav a {
	text-decoration: none;
}

nav a:hover {
	text-decoration: underline;
}

nav li::after {
	content: '·';
	margin: 0 1em;
}

nav li:last-child::after {
	display: none;
}

nav ul {
	display: flex;
	list-style: none;
	justify-content: center;
	margin: 0;
	padding: 0;
}

ol, p, ul {
	line-height: 1.5em;
}

p > code {
	background: #233257;
	border-radius: var(--border-radius);
	font-family: 'Nimbus Mono PS', 'Courier New', monospace;
	font-size: 85%;
	margin: 0;
	padding: .2em .4em;
	white-space: break-spaces;
}

pre {
	background: #233257;
	border-radius: var(--border-radius);
	font-family: 'Nimbus Mono PS', 'Courier New', monospace;
	font-size: 85%;
	margin: 0 -2.5%;
	padding: 2.5%;
	white-space: break-spaces;
	width: 105%;
}

section {
	clear: both;
	margin-bottom: 2em;
}

section:last-child {
	margin-bottom: 0;
}

strong {
	font-weight: bold;
}

svg {
	height: 1em;
	width: 1em;
}

time {
	color: var(--color-dim);
	font-size: 0.85em;
}

#bio {
	font-size: 14pt;
}

#bio img {
	display: block;
	float: right;
	margin-left: 1em;
	width: 40%;
}

#container {
	max-width: 920px;
	min-width: 420px;
	margin: 0 auto;
	padding: 3em 1em;
}

#credits h3 {
	margin-top: 2em;
}

#education .degree {
	font-weight: bold;
}

#posts li {
	margin: 1em 0;
}

#posts ol {
	list-style: none;
	margin: 0;
	padding: 0;
}

#posts a {
	text-decoration: none;
}

#posts a:hover {
	text-decoration: underline;
}

#rss-link {
	font-size: 0.85em;
	text-align: center;
}

#rss-link a {
	text-decoration: none;
}

#rss-link a:hover span {
	text-decoration: underline;
}

.portfolio-list {
	list-style: none;
	margin: 0;
	padding: 0;
}

.portfolio-list li {
	margin-bottom: 1.5em;
}

.portfolio-list li:last-child {
	margin-bottom: 0;
}

.portfolio-list p {
	margin: 0.5em 0;
}

.project-list {
	display: grid;
	grid-template-columns: 1fr 1fr;
	column-gap: 1em;
	row-gap: 1em;
	list-style: none;
	margin: 0;
	padding: 0;
}

.project-list > li {
	border: 1px solid rgba(255, 255, 255, 0.1);
	border-radius: var(--border-radius);
	padding: 1em;
}

.project-list p {
	margin: 0.5em 0;
}

.song-list {
	list-style: none;
	margin: 0;
	padding: 0;
}

.song-list h4 {
	display: inline;
	font-weight: normal;
	margin: 0;
}

.song-list li {
	line-height: 1.35em;
	margin: 1em 0;
}

.song-list p {
	color: var(--color-dim);
	display: inline;
	font-size: 0.85em;
	margin: 0;
}

.tech-list {
	color: var(--color-dim);
	list-style: none;
	margin: 0;
	padding: 0;
}

.tech-list li {
	display: inline-flex;
	align-items: center;
	margin-right: 0.5em;
}

.tech-list li:last-child {
	margin-right: 0;
}

.tech-list svg {
	margin-right: 0.5em;
}

.video-list {
	display: grid;
	gap: 1em;
	grid-template-columns: repeat(3, 1fr);
	list-style: none;
	margin: 0;
	padding: 0;
}

.video-list a {
	display: block;
}

.video-list a img {
	border: 2px solid transparent;
	display: block;
	margin: -2px;
}

.video-list a:hover img {
	border-color: var(--color-text);
}

@media only screen and (max-width: 1200px) {
	article img,
	pre {
		margin: 0%;
		max-width: 100%;
		width: 100%;
	}
}

@media only screen and (max-width: 720px) {
	#bio img {
		display: block;
		float: none;
		margin: 1em 0;
		width: 100%;
	}

	#experience h3 {
		line-height: 1.5em;
	}

	#experience .date {
		display: block;
	}

	#experience .separator {
		display: none;
	}

	.project-list {
		display: block;
	}

	.project-list > li {
		border: none;
		margin-bottom: 1.5em;
		padding: 0;
	}

	.project-list > li li:last-child {
		margin-bottom: 0;
	}

	.song-list h4,
	.song-list p {
		display: block;
	}

	.video-list {
		gap: 0.5em;
		grid-template-columns: repeat(2, 1fr);
	}
}

